<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/montserratmedium"
                    android:text="@string/enter_credentials"
                    android:textColor="@color/blue_500"
                    android:textSize="@dimen/_16sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/blue_500"
                        android:textSize="@dimen/_11sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:inputType="textPassword"
                        android:textColor="@color/blue_500"
                        android:textSize="@dimen/_11sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:backgroundTint="@color/blue_500"
                    android:fontFamily="@font/montserratsemibold"
                    android:paddingStart="@dimen/_50sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_50sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    app:cornerRadius="@dimen/_15sdp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>